	(create_virtindex_node): Merged into caller in info_virtual_index.
	(info_virtual_index): Don't create a FILE_BUFFER to hold generated
	node.  Remove word "Info" from heading in node.
	(index_index): Comment changed.

	* info/info-utils.c (printed_representation): Return byte length 0 for
	"Info tags" so that they are hidden on the screen.

2014-09-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (set_window_pagetop): Set goal column as well as point
	when moving point into displayed part of node.

	* info/infokey.c (compile): Use KEYMAP_META instead of Meta to allow
	binding key chords including Meta.

	* info/terminal.c (term_bt, term_kB, terminal_initialize_terminal)
	(initialize_byte_map): Get 'BackTab' key byte sequence from 'kB'
	capability instead of 'bt'.

2014-09-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_clear_search): New user command.
	* doc/info-stnd.texi (Searching Commands): Document it.

2014-09-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (move_to_goal_column): Merged into callers.
	(point_next_line, point_prev_line): Call window_compute_line_map for
	new line.
	(info_next_line, info_prev_line): Keep goal column when a numeric
	argument is used resulting in a new node being put in the window.
	(info_beginning_of_line, info_end_of_line): Don't call
	window_compute_line_map.
	(info_end_of_line): Go one past the last character in line, instead
	of right on it, for consistency with Emacs and readline.

2014-09-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_one_window): Clear lines with
	highlights in them properly.
	* info/display.c (display_update_window_1): Go to new line properly
	when highlighted region crosses line.

	* info: (all files) Change use of quotation marks.  Quote 'thusly'
	instead of `thusly' in user messages.

	* doc/info-stnd.texi (Invoking Info) <--no-raw-escapes>: Change
	explanation of what this option does.
